--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,15 @@
     <script src="vendor/babel-standalone.js"></script>
     <script src="vendor/react.js"></script>
     <script src="vendor/react-dom.js"></script>
+      <script src="path/to/moment-duration-format.js"></script>
+      <script src="path/to/moment.js"></script>
+      <script>
+          moment().format();
+      </script>
 
-      <script src="vendor/uuid.js"></script>
-      <script src="vendor/fetch.js"></script>
+
+      <!--<script src="vendor/uuid.js"></script>-->
+      <!--<script src="vendor/fetch.js"></script>-->
 
 
     <title>Time Tracker</title>
@@ -25,23 +31,21 @@
 
   <body>
 
-  <script type="text/babel" src="./js/client.js"></script> <script type="text/babel" src="./js/helpers.js"></script> <script
-          type="text/babel"
-          data-plugins="transform-class-properties"
-          src="../src/App.js"
-  ></script>
+  <!--<div id="main" class="main ui">-->
+      <!--<h1 class="ui dividing centered header">Timers</h1>-->
+      <!--<div id="content"></div> </div>-->
 
-  <div id="main" class="main ui">
-      <h1 class="ui dividing centered header">Timers</h1>
-      <div id="content"></div> </div>
-
-  
-
+  <script src="../src/App.js"></script>
 
   <script
           type="text/babel"
           data-plugins="transform-class-properties"
-          src="../src/App.js"
-  ></script> </body>
+          src="../src/App.js"></script>
+
+  <div id="root"></div>
+  </body>
+
+
+
 
 </html>
