let's try again

--- a/public/index.html
+++ b/public/index.html
@@ -20,12 +20,13 @@
           moment().format();
       </script>
 
+      <script src="http://wzrd.in/standalone/uuid%2Fv4@latest"></script>
+      <script>
+          uuidv4(); // -> v4 UUID
+      </script>
 
-      <!--<script src="vendor/uuid.js"></script>-->
-      <!--<script src="vendor/fetch.js"></script>-->
 
-
-    <title>Time Tracker</title>
+      <title>Time Tracker</title>
   </head>
 
 
